[project]
name = "AutoEncoders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pytorch-ignite>=0.5.1",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
]
